--- a/memory_game/style.css
+++ b/memory_game/style.css
@@ -6,23 +6,45 @@ body {
 header {
 	background-color: #F15B31;
 	padding: 30px 20px;
-	text-decoration-color: white;
 }
 
 nav {
 	background-color: #00A6B3;
 	padding: 20px 0;
-	text-decoration-color: white;
-	text-decoration-line: none;
 }
 
 a {
 	margin: 0 20px;
+	text-decoration-line: none;
+	border-bottom: 2px solid transparent;
+}
+
+a:hover {
+  border-color: white;
 }
 
 main {
 	width: 850px;
 	margin: 35px auto;
+}
+
+footer{
+	text-transform: uppercase;
+	padding: 0 20px;
+	background-color: #0D2C40;
+	color: white;
+	font-size: 14px;
+	letter-spacing: .08em;
+	font-weight: 500;
+}
+
+.clearfix:after {
+  visibility: hidden;
+  display: block;
+  content: " ";
+  clear: both;
+  height: 0;
+  font-size: 0;
 }
 
 body {
@@ -31,21 +53,35 @@ body {
 
 h1 {
     font-family: "Raleway", sans-serif;
-    color: #0D2C40;
+    color: white;
     letter-spacing: 1px;
     font-weight: 400;
     font-size: 45px;
     margin: 0;
+    text-transform: uppercase;
 }
 
 .click {
 	font-family: "Raleway", sans-serif;
-	color: #F15B31;
+	color: white;
 	letter-spacing: 1px;
 	font-weight: 600;
 	font-size: 18px;
+	text-transform: uppercase;
 }
 
+.copyright {
+	float: left;
+}
+
+.message {
+	float: right;
+}
+
+.name {
+	color: #F15B31;
+	font-weight: 700;
+}
 
 h2{
 	font-family: "Raleway", sans-serif;
@@ -53,10 +89,11 @@ h2{
 	letter-spacing: 1px;
 	font-weight: 600;
 	font-size: 20px;
+	text-transform: uppercase;
 }
 
 p {
-  font-family: "Droid Serif", serif;
+  font-family: "Raleway", serif;
   line-height: 26px;
   font-size: 18px;
 }
